--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "babel-plugin-webpack-async-module-name",
-  "version": "1.0.0",
-  "description": "This plugin use custom identifier to named webpack dynamic import modules.",
-  "main": "src/index.js",
-  "scripts": {},
+  "version": "1.0.2",
+  "description": "This plugin uses custom identifier to name webpack dynamically imported modules.",
+  "main": "lib/index.js",
+  "scripts": {
+    "test": "mocha",
+    "build": "babel src --out-dir lib"
+  },
   "keywords": [
     "babel",
     "plugin"
@@ -17,5 +20,10 @@
   },
   "homepage": "https://github.com/tgxhx/babel-plugin-webpack-async-module-name",
   "author": "tgxh2020@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "chai": "^4.1.2",
+    "mocha": "^5.1.1"
+  }
 }
