--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "babel-plugin-webpack-async-module-name",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "This plugin uses custom identifier to name webpack dynamically imported modules.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha",
+    "prepublishOnly": "npm run test",
+    "test": "npm run build && mocha",
     "build": "babel src --out-dir lib"
   },
   "keywords": [
@@ -23,7 +24,10 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "@babel/core": "^7.11.4",
+    "@babel/cli": "^7.10.5",
     "chai": "^4.1.2",
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "prettier": "^2.1.1"
   }
 }
